[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["katsumi143 <32640219+katsumi143@users.noreply.github.com>"]
edition = "2024"
license = "AGPL-3.0-only"
version = "0.1.0"
homepage = "https://github.com/hakusoda/POLYUMI"
repository = "https://github.com/hakusoda/POLYUMI"
rust-version = "1.79"

[workspace.dependencies]
actix-web = "4.8.0"
async-once-cell = "0.5.3"
base64 = "0.22.1"
base64urlsafedata = "0.5.0"
bytes = "1.6.1"
chrono = { version = "0.4.38", features = ["serde"] }
dashmap = { version = "6.0.1", features = ["inline"] }
futures = "0.3.30"
jsonwebtoken = "9.3.0"
log = "0.4.22"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
sqlx = { version = "0.7.4", features = ["uuid", "json", "chrono", "macros", "postgres", "tls-native-tls", "rust_decimal", "runtime-tokio"] }
tokio = { version = "1.38.1", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.63"
once_cell = "1.19.0"
serde_json = "1.0.120"
simd-json = "0.13.10"
tracing-error = "0.2.0"
twilight-model = { git = "https://github.com/twilight-rs/twilight.git", rev = "6a44028" }
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["http2", "rustls-tls"], default-features = false }
validator = { version = "0.18.1", features = ["derive"] }

[profile.dev]
lto = false
debug = true
rpath = false
panic = "unwind"
opt-level = 0
incremental = true
codegen-units = 256
overflow-checks = true
debug-assertions = true

[profile.release]
lto = true
strip = true
panic = "abort"
opt-level = 3
incremental = false
codegen-units = 1
debug-assertions = false