cargo-features = ["edition2024"]

[package]
name = "polyumi_cache"
description = "HAKUMI's Backend Service"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sqlx.workspace = true
dashmap.workspace = true
once_cell.workspace = true
thiserror.workspace = true
polyumi_util.path = "../polyumi_util"
polyumi_models.path = "../polyumi_models"
twilight-model.workspace = true